@@ -1,3 +1,4 @@
+	* fix resume file issue related to daylight savings time on windows
 	* improve error checking in lazy_bdecode
 
 0.16.16 release
